tests/semantic/fact_cat/fact_cat.err
Error: Function in fact in file fact_cat.dl at line 7
F(cat("x","y"),"AA").
--^-------------------
Error: Relation expects value of type number but got argument of type symbol constant in file fact_cat.dl at line 7
F(cat("x","y"),"AA").
--^-------------------
2 errors generated, evaluation aborted
