tests/semantic/fact_cat/fact_cat.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2020, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt


.type Node <: symbol

.decl F (node1:number, node2:Node)
.input F ()

// not ok binary functor cat in fact
F(cat("x","y"),"AA").
